--- a/src/App.css
+++ b/src/App.css
@@ -23,9 +23,7 @@
 }
 
 .navbar {
- 
   margin-top: auto;
-  
 }
 #top-filler {
   margin-bottom: auto;
@@ -36,7 +34,45 @@
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
+/* * {
+  box-sizing: border-box;
+
+  padding: 0;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+}
+
+a {
+  color: #333;
+  text-decoration: none;
+}
+
+.container {
+  margin: 0;
+  position: relative;
+  width: 50%;
+}
+
+.btn {
+  display: inline-block;
+  border: none;
+  background: #555;
+  color: #fff;
+  padding: 7px 20px;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #666;
+} */
