--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,14 @@
+/* font-family: 'Oxygen', sans-serif;
+font-family: 'Satisfy', cursive;
+font-family: 'Prata', serif;
+font-family: 'Gentium Basic', serif; 
+font-family: 'Julius Sans One', sans-serif;
+font-family: 'Sintony', sans-serif;
+*/
+
 .App {
   text-align: center;
+  font-family: 'Sintony', sans-serif;
 }
 
 .App-logo {
@@ -8,20 +17,37 @@
 }
 
 .App-header {
-  background-color: #222;
-  height: 150px;
+  background-color: #9ed85bd0;
+
+  /* background-image: linear-gradient(
+    315deg,
+    hsl(108, 50%, 71%) 40%,
+    #64be3a 64%
+  ); */
+
+  height: 60px;
   padding: 20px;
-  color: white;
+  color: rgb(49, 51, 49);
 }
 
 .App-title {
-  font-size: 1.5em;
+  font-family: 'Satisfy', cursive;
+  font-size: 2em;
+  margin-top: -95px;
 }
 
 .App-intro {
   font-size: large;
 }
+html {
+  background-image: './img/theone.jpg';
+}
 
+.text-secondary {
+  font-size: 20px;
+  color: #ffffff;
+  font-weight: bolder;
+}
 .navbar {
   margin-top: auto;
 }
@@ -29,9 +55,9 @@
   margin-bottom: auto;
 }
 
-#nav-container {
+/* #nav-container {
   align-items: flex-end;
-}
+} */
 
 @keyframes App-logo-spin {
   from {
@@ -41,38 +67,3 @@
     transform: rotate(360deg);
   }
 }
-
-/* * {
-  box-sizing: border-box;
-
-  padding: 0;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
-  line-height: 1.4;
-}
-
-a {
-  color: #333;
-  text-decoration: none;
-}
-
-.container {
-  margin: 0;
-  position: relative;
-  width: 50%;
-}
-
-.btn {
-  display: inline-block;
-  border: none;
-  background: #555;
-  color: #fff;
-  padding: 7px 20px;
-  cursor: pointer;
-}
-
-.btn:hover {
-  background: #666;
-} */
