--- a/client/src/App.css
+++ b/client/src/App.css
@@ -17,13 +17,7 @@ font-family: 'Sintony', sans-serif;
 }
 
 .App-header {
-  background-color: #9ed85bd0;
-
-  /* background-image: linear-gradient(
-    315deg,
-    hsl(108, 50%, 71%) 40%,
-    #64be3a 64%
-  ); */
+  background-color: #7cd417d0;
 
   height: 60px;
   padding: 20px;
@@ -39,6 +33,25 @@ font-family: 'Sintony', sans-serif;
 .App-intro {
   font-size: large;
 }
+
+#main {
+  position: absolute;
+}
+
+.container {
+  margin-left: 420px;
+  margin-right: auto;
+  padding-left: 0.4rem;
+  padding-right: 0.4rem;
+  width: 70%;
+}
+/* .MuiGrid-container {
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  box-sizing: border-box;
+} */
+
 html {
   background-image: './img/theone.jpg';
 }
