--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,22 +5,6 @@ font-family: 'Gentium Basic', serif;
 font-family: 'Julius Sans One', sans-serif;
 font-family: 'Sintony', sans-serif;
 */
-:root {
-  /* Place variables within here to use the variables globally. */
-  color: var(--lt-green);
-}
-
-.custom-variables {
-  --lt-green: #a6c844;
-  --some-keyword: italic;
-  --some-size: 1.25em;
-  --some-complex-value: 1px 1px 2px whitesmoke, 0 0 1em slategray,
-    0 0 0.2em slategray;
-  color: var(--lt-green);
-  font-size: var(--some-size);
-  font-style: var(--some-keyword);
-  text-shadow: var(--some-complex-value);
-}
 
 .App {
   text-align: center;
@@ -34,7 +18,7 @@ font-family: 'Sintony', sans-serif;
 }
 
 .App-header {
-  background-color: #7cd417d0;
+  /* background-color: #7cd417d0; */
   height: 75px;
   padding: 20px;
 }
@@ -86,17 +70,4 @@ a.text-second:visited {
 }
 #top-filler {
   margin-bottom: auto;
-}
-
-/* #nav-container {
-  align-items: flex-end;
-} */
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
