images, link, save

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -52,9 +52,9 @@ font-family: 'Sintony', sans-serif;
   box-sizing: border-box;
 } */
 
-html {
+/* html {
   background-image: './img/theone.jpg';
-}
+} */
 
 .text-second {
   font-size: 20px;
