style touch ups

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,6 +35,12 @@ font-family: 'Sintony', sans-serif;
   font-size: large;
 }
 
+.App-hover {
+  text-decoration: 'none';
+  text-emphasis: none;
+  color: '#7cd417d0';
+}
+
 #main {
   position: absolute;
 }
