--- a/client/src/components/List.css
+++ b/client/src/components/List.css
@@ -26,9 +26,9 @@
 }
 @media only screen and (max-width: 600px) {
   #main {
-    max-width: 1px !important;
+    /* max-width: 1px !important; */
     /* background-color: green; */
-    display: none;
+    /* display: none; */
   }
   .grid {
     /* float: right; */
