--- a/client/src/components/List.css
+++ b/client/src/components/List.css
@@ -1,32 +1,43 @@
 @media only screen and (max-width: 1220px) {
-  #main {
+  #mainPantry,
+  #mainShopping {
     max-width: 280px !important;
     /* background-color: red !important; */
   }
 }
 @media only screen and (max-width: 980px) {
-  #main {
+  #mainPantry,
+  #mainShopping {
     max-width: 265px !important;
   }
 }
+@media only screen and (max-width: 960px) {
+  #mainShopping {
+    max-width: 333px !important;
+  }
+}
+
 @media only screen and (max-width: 940px) {
-  #main {
+  #mainPantry {
     max-width: 225px !important;
   }
 }
 @media only screen and (max-width: 780px) {
-  #main {
+  #mainPantry,
+  #mainShopping {
     max-width: 200px !important;
   }
 }
 @media only screen and (max-width: 680px) {
-  #main {
+  #mainPantry,
+  #mainShopping {
     max-width: 185px !important;
   }
 }
 @media only screen and (max-width: 600px) {
-  #main {
-    /* max-width: 1px !important; */
+  #mainPantry,
+  #mainShopping {
+    max-width: 350px !important;
     /* background-color: green; */
     /* display: none; */
   }
@@ -36,7 +47,7 @@
     top: 1;
     left: 1;
     background-image: url('../img/CurvyLines.png');
-    /* background-color: green; */
+    background-color: green;
     /* width: 100%; */
     /* background-color: aqua; */
   }
