--- a/client/src/components/List.css
+++ b/client/src/components/List.css
@@ -1,25 +1,26 @@
 @media only screen and (max-width: 1220px) {
   #mainPantry,
   #mainShopping {
-    max-width: 280px !important;
+    max-width: 360px !important;
     /* background-color: red !important; */
   }
 }
 @media only screen and (max-width: 980px) {
   #mainPantry,
   #mainShopping {
-    max-width: 265px !important;
+    max-width: 360px !important;
   }
 }
-@media only screen and (max-width: 960px) {
+/* @media only screen and (max-width: 960px) {
   #mainShopping {
     max-width: 333px !important;
   }
-}
+} */
 
-@media only screen and (max-width: 940px) {
-  #mainPantry {
-    max-width: 225px !important;
+@media only screen and (max-width: 960px) {
+  #mainPantry,
+  #mainShopping {
+    max-width: 340px !important;
   }
 }
 @media only screen and (max-width: 780px) {
@@ -38,9 +39,13 @@
   #mainPantry,
   #mainShopping {
     max-width: 350px !important;
+
     /* background-color: green; */
     /* display: none; */
   }
+  /* .item {
+    margin-left: 100px;
+  } */
   .grid {
     /* float: right; */
     position: absolute;
