--- a/client/src/components/List.css
+++ b/client/src/components/List.css
@@ -1,58 +1,42 @@
 @media only screen and (max-width: 1220px) {
-  #mainPantry,
-  #mainShopping {
-    max-width: 360px !important;
+  #main {
+    max-width: 280px !important;
     /* background-color: red !important; */
   }
 }
 @media only screen and (max-width: 980px) {
-  #mainPantry,
-  #mainShopping {
-    max-width: 360px !important;
+  #main {
+    max-width: 265px !important;
   }
 }
-/* @media only screen and (max-width: 960px) {
-  #mainShopping {
-    max-width: 333px !important;
-  }
-} */
-
-@media only screen and (max-width: 960px) {
-  #mainPantry,
-  #mainShopping {
-    max-width: 340px !important;
+@media only screen and (max-width: 940px) {
+  #main {
+    max-width: 225px !important;
   }
 }
 @media only screen and (max-width: 780px) {
-  #mainPantry,
-  #mainShopping {
+  #main {
     max-width: 200px !important;
   }
 }
 @media only screen and (max-width: 680px) {
-  #mainPantry,
-  #mainShopping {
+  #main {
     max-width: 185px !important;
   }
 }
 @media only screen and (max-width: 600px) {
-  #mainPantry,
-  #mainShopping {
-    max-width: 350px !important;
-
+  #main {
+    max-width: 1px !important;
     /* background-color: green; */
-    /* display: none; */
+    display: none;
   }
-  /* .item {
-    margin-left: 100px;
-  } */
   .grid {
     /* float: right; */
     position: absolute;
     top: 1;
     left: 1;
     background-image: url('../img/CurvyLines.png');
-    background-color: green;
+    /* background-color: green; */
     /* width: 100%; */
     /* background-color: aqua; */
   }
